Remove tokens from env and add example

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ SQLITE_TIMEOUT=30
 SQLITE_CHECK_SAME_THREAD=False
 
 # 数据源配置（请替换为你的实际token）
-TUSHARE_TOKEN=
+TUSHARE_TOKEN=your_tushare_token_here
 TUSHARE_TIMEOUT=60
 TUSHARE_RETRY_COUNT=3
 TUSHARE_MAX_REQUESTS=200
